--- a/src/AioCore.Hosted/AioCore.Web/Shared/MainLayout.razor
+++ b/src/AioCore.Hosted/AioCore.Web/Shared/MainLayout.razor
@@ -1,3 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
-@Body
+<Layout>
+    <Sider>Sider</Sider>
+    <Layout>
+        <Header>Header</Header>
+        <Content>@Body</Content>
+        <Footer>Footer</Footer>
+    </Layout>
+</Layout>
