--- a/src/AioCore.Hosted/AioCore.Web/Shared/MainLayout.razor
+++ b/src/AioCore.Hosted/AioCore.Web/Shared/MainLayout.razor
@@ -1,9 +1,27 @@
 ﻿@inherits LayoutComponentBase
 
-<Layout Class="h-full">
-    <Sider Width="65" Theme="SiderTheme.Light">Sider</Sider>
-    <Layout>
-        <Header Style="background-color: white" Class="border-b">Header</Header>
-        <Content>@Body</Content>
-    </Layout>
-</Layout>
+<div class="h-screen overflow-hidden flex flex-col">
+    <header class="bg-white border-b flex h-16 items-center">
+        <div>
+            <a href="#">
+                <img class="h-12 pl-2" src="/images/logo.svg" alt="Workflow">
+            </a>
+        </div>
+    </header>
+
+    <div class="min-h-0 flex-1 flex overflow-hidden">
+        <nav aria-label="Sidebar" class="border-r bg-white hidden md:block md:flex-shrink-0 md:overflow-y-auto">
+            <div class="flex flex-col p-4 relative space-y-3 w-20">
+                
+            </div>
+        </nav>
+
+        <main class="min-w-0 flex-1 lg:flex">
+            <aside class="hidden lg:block lg:flex-shrink-0 lg:order-first">
+                <div class="h-full relative flex flex-col w-96">
+                    @Body
+                </div>
+            </aside>
+        </main>
+    </div>
+</div>
