complete for layout of web

--- a/src/AioCore.Hosted/AioCore.Web/_Imports.razor
+++ b/src/AioCore.Hosted/AioCore.Web/_Imports.razor
@@ -8,4 +8,6 @@
 @using Microsoft.JSInterop
 @using AioCore.Web
 @using AioCore.Web.Shared
+@using AioCore.Web.Components
+@using AioCore.Web.Components.SvgIcons
 @using AntDesign
