--- a/src/AioCore.Hosted/AioCore.Web/Shared/MainLayout.razor
+++ b/src/AioCore.Hosted/AioCore.Web/Shared/MainLayout.razor
@@ -4,16 +4,37 @@
     <header class="bg-white border-b flex h-16 items-center">
         <div>
             <a href="#">
-                <img class="h-12 pl-2" src="/images/logo.svg" alt="Workflow">
+                <img class="h-9 pl-2" src="/images/logo.svg" alt="aioc">
             </a>
         </div>
     </header>
 
     <div class="min-h-0 flex-1 flex overflow-hidden">
         <nav aria-label="Sidebar" class="border-r bg-white hidden md:block md:flex-shrink-0 md:overflow-y-auto">
-            <div class="flex flex-col p-4 relative space-y-3 w-20">
-                
+            <div class="flex flex-col border-b p-2 relative space-y-3 w-16">
+                <div class="flex h-12 items-center justify-center rounded bg-gray-200">
+                    <AiocSvg Size="20">
+                        <UserIcon/>
+                    </AiocSvg>
+                </div>
             </div>
+            <ul class="menu-items grid items-center justify-center mt-2">
+                <li class="menu-item flex h-11 items-center justify-center w-full active">
+                    <AiocSvg Size="20">
+                        <HomeIcon/>
+                    </AiocSvg>
+                </li>
+                <li class="menu-item flex h-11 items-center justify-center w-full">
+                    <AiocSvg Size="20">
+                        <HomeIcon/>
+                    </AiocSvg>
+                </li>
+                <li class="menu-item flex h-11 items-center justify-center w-full">
+                    <AiocSvg Size="20">
+                        <HomeIcon/>
+                    </AiocSvg>
+                </li>
+            </ul>
         </nav>
 
         <main class="min-w-0 flex-1 lg:flex">
