--- a/src/AioCore.Hosted/AioCore.Web/wwwroot/css/app.css
+++ b/src/AioCore.Hosted/AioCore.Web/wwwroot/css/app.css
@@ -11,6 +11,10 @@ nav .menu-items .menu-item.active {
 
 /*Pages*/
 /*Shared*/
+nav .menu-items .menu-item:hover {
+  border-left: 4px solid #04A385;
+}
+
 .aioc main {
   background-color: #04A385;
 }
