cấu hình danh sách icon chức năng menu

--- a/src/AioCore.Hosted/AioCore.Web/Shared/NavMenu.razor
+++ b/src/AioCore.Hosted/AioCore.Web/Shared/NavMenu.razor
@@ -1,32 +1,65 @@
 <ul class="menu-items grid items-center justify-center mt-2">
-    <li class="menu-item flex h-11 items-center justify-center w-full active">
-        <AiocSvg Size="20">
-            <HomeIcon/>
-        </AiocSvg>
-    </li>
-    <li class="menu-item flex h-11 items-center justify-center w-full">
-        <AiocSvg Size="20">
-            <HomeIcon/>
-        </AiocSvg>
-    </li>
-    <li class="menu-item flex h-11 items-center justify-center w-full">
-        <AiocSvg Size="20">
-            <HomeIcon/>
-        </AiocSvg>
-    </li>
-    <li class="menu-item flex h-11 items-center justify-center w-full">
-        <AiocSvg Size="20">
-            <HomeIcon/>
-        </AiocSvg>
-    </li>
-    <li class="menu-item flex h-11 items-center justify-center w-full">
-        <AiocSvg Size="20">
-            <HomeIcon/>
-        </AiocSvg>
-    </li>
-    <li class="menu-item flex h-11 items-center justify-center w-full">
-        <AiocSvg Size="20">
-            <HomeIcon/>
-        </AiocSvg>
-    </li>
+    <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.HomeTooltip">
+        <li class="menu-item flex h-11 items-center justify-center w-full active">
+            <AiocSvg Size="20">
+                <HomeIcon/>
+            </AiocSvg>
+        </li>
+    </Tooltip>
+    <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.TenantTooltip">
+        <li class="menu-item flex h-11 items-center justify-center w-full">
+            <AiocSvg Size="20">
+                <TenantIcon/>
+            </AiocSvg>
+        </li>
+    </Tooltip>
+    <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.EntityTooltip">
+        <li class="menu-item flex h-11 items-center justify-center w-full">
+            <AiocSvg Size="20">
+                <EntityIcon/>
+            </AiocSvg>
+        </li>
+    </Tooltip>
+    <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.FormTooltip">
+        <li class="menu-item flex h-11 items-center justify-center w-full">
+            <AiocSvg Size="20">
+                <FormIcon/>
+            </AiocSvg>
+        </li>
+    </Tooltip>
+    <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.HomeTooltip">
+        <li class="menu-item flex h-11 items-center justify-center w-full">
+            <AiocSvg Size="20">
+                <ViewIcon/>
+            </AiocSvg>
+        </li>
+    </Tooltip>
+    <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.FilterTooltip">
+        <li class="menu-item flex h-11 items-center justify-center w-full">
+            <AiocSvg Size="20">
+                <FilterIcon/>
+            </AiocSvg>
+        </li>
+    </Tooltip>
+    <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.ReportTooltip">
+        <li class="menu-item flex h-11 items-center justify-center w-full">
+            <AiocSvg Size="20">
+                <ReportIcon/>
+            </AiocSvg>
+        </li>
+    </Tooltip>
+    <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.LayoutTooltip">
+        <li class="menu-item flex h-11 items-center justify-center w-full">
+            <AiocSvg Size="20">
+                <LayoutIcon/>
+            </AiocSvg>
+        </li>
+    </Tooltip>
+    <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.FeatureTooltip">
+        <li class="menu-item flex h-11 items-center justify-center w-full">
+            <AiocSvg Size="20">
+                <FeatureIcon/>
+            </AiocSvg>
+        </li>
+    </Tooltip>
 </ul>
