--- a/src/AioCore.Hosted/AioCore.Web/_Imports.razor
+++ b/src/AioCore.Hosted/AioCore.Web/_Imports.razor
@@ -10,4 +10,5 @@
 @using AioCore.Web.Shared
 @using AioCore.Web.Components
 @using AioCore.Web.Components.SvgIcons
+@using AioCore.Web.Constants
 @using AntDesign
