--- a/src/AioCore.Hosted/AioCore.Web/Shared/NavMenu.razor
+++ b/src/AioCore.Hosted/AioCore.Web/Shared/NavMenu.razor
@@ -1,65 +1,70 @@
-<ul class="menu-items grid items-center justify-center mt-2">
-    <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.HomeTooltip">
-        <li class="menu-item flex h-11 items-center justify-center w-full active">
+<div class="menu-items grid items-center justify-center mt-2">
+    <NavLink class="menu-item relative flex h-11 items-center justify-center w-full" ActiveClass="@_activeClass" Match="NavLinkMatch.All" href="/s/home">
+        <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.HomeTooltip">
             <AiocSvg Size="20">
                 <HomeIcon/>
             </AiocSvg>
-        </li>
-    </Tooltip>
-    <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.TenantTooltip">
-        <li class="menu-item flex h-11 items-center justify-center w-full">
+        </Tooltip>
+    </NavLink>
+    <NavLink class="menu-item relative flex h-11 items-center justify-center w-full" ActiveClass="@_activeClass" Match="NavLinkMatch.All" href="/s/tenants">
+        <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.TenantTooltip">
             <AiocSvg Size="20">
                 <TenantIcon/>
             </AiocSvg>
-        </li>
-    </Tooltip>
-    <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.EntityTooltip">
-        <li class="menu-item flex h-11 items-center justify-center w-full">
+        </Tooltip>
+    </NavLink>
+    <NavLink class="menu-item relative flex h-11 items-center justify-center w-full" ActiveClass="@_activeClass" Match="NavLinkMatch.All" href="/s/entities">
+        <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.EntityTooltip">
             <AiocSvg Size="20">
                 <EntityIcon/>
             </AiocSvg>
-        </li>
-    </Tooltip>
-    <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.FormTooltip">
-        <li class="menu-item flex h-11 items-center justify-center w-full">
+        </Tooltip>
+    </NavLink>
+    <NavLink class="menu-item relative flex h-11 items-center justify-center w-full" ActiveClass="@_activeClass" Match="NavLinkMatch.All" href="/s/forms">
+        <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.FormTooltip">
             <AiocSvg Size="20">
                 <FormIcon/>
             </AiocSvg>
-        </li>
-    </Tooltip>
-    <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.HomeTooltip">
-        <li class="menu-item flex h-11 items-center justify-center w-full">
+        </Tooltip>
+    </NavLink>
+    <NavLink class="menu-item relative flex h-11 items-center justify-center w-full" ActiveClass="@_activeClass" Match="NavLinkMatch.All" href="/s/views">
+        <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.ViewTooltip">
             <AiocSvg Size="20">
                 <ViewIcon/>
             </AiocSvg>
-        </li>
-    </Tooltip>
-    <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.FilterTooltip">
-        <li class="menu-item flex h-11 items-center justify-center w-full">
+        </Tooltip>
+    </NavLink>
+    <NavLink class="menu-item relative flex h-11 items-center justify-center w-full" ActiveClass="@_activeClass" Match="NavLinkMatch.All" href="/s/filters">
+        <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.FilterTooltip">
             <AiocSvg Size="20">
                 <FilterIcon/>
             </AiocSvg>
-        </li>
-    </Tooltip>
-    <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.ReportTooltip">
-        <li class="menu-item flex h-11 items-center justify-center w-full">
+        </Tooltip>
+    </NavLink>
+    <NavLink class="menu-item relative flex h-11 items-center justify-center w-full" ActiveClass="@_activeClass" Match="NavLinkMatch.All" href="/s/reports">
+        <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.ReportTooltip">
             <AiocSvg Size="20">
                 <ReportIcon/>
             </AiocSvg>
-        </li>
-    </Tooltip>
-    <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.LayoutTooltip">
-        <li class="menu-item flex h-11 items-center justify-center w-full">
+        </Tooltip>
+    </NavLink>
+    <NavLink class="menu-item relative flex h-11 items-center justify-center w-full" ActiveClass="@_activeClass" Match="NavLinkMatch.All" href="/s/layouts">
+        <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.LayoutTooltip">
             <AiocSvg Size="20">
                 <LayoutIcon/>
             </AiocSvg>
-        </li>
-    </Tooltip>
-    <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.FeatureTooltip">
-        <li class="menu-item flex h-11 items-center justify-center w-full">
+        </Tooltip>
+    </NavLink>
+    <NavLink class="menu-item relative flex h-11 items-center justify-center w-full" ActiveClass="@_activeClass" Match="NavLinkMatch.All" href="/s/features">
+        <Tooltip Placement="@PlacementType.Right" Title="TooltipConstants.FeatureTooltip">
             <AiocSvg Size="20">
                 <FeatureIcon/>
             </AiocSvg>
-        </li>
-    </Tooltip>
-</ul>
+        </Tooltip>
+    </NavLink>
+</div>
+
+@code
+{
+    private string _activeClass = "active";
+}
