--- a/src/AioCore.Hosted/AioCore.Web/_Imports.razor
+++ b/src/AioCore.Hosted/AioCore.Web/_Imports.razor
@@ -10,5 +10,6 @@
 @using AioCore.Web.Shared
 @using AioCore.Web.Components
 @using AioCore.Web.Components.SvgIcons
+@using AioCore.Web.Components.SvgIcons.ArrowIcons
 @using AioCore.Web.Constants
 @using AntDesign
