--- a/src/AioCore.Hosted/AioCore.Web/Shared/MainLayout.razor
+++ b/src/AioCore.Hosted/AioCore.Web/Shared/MainLayout.razor
@@ -21,8 +21,8 @@
             <NavMenu/>
         </nav>
 
-        <main class="min-w-0 flex-1 lg:flex">
-            <div class="h-full relative flex flex-col w-96">
+        <main class="main min-w-0 flex-1 px-60">
+            <div class="h-full relative flex flex-col">
                 @Body
             </div>
         </main>
