change style primary

--- a/src/AioCore.Hosted/AioCore.Web/Pages/SettingPages/SettingTenantPage.razor
+++ b/src/AioCore.Hosted/AioCore.Web/Pages/SettingPages/SettingTenantPage.razor
@@ -5,6 +5,66 @@
 
 <AiocBreadcrumb/>
 
+<dl class="bg-white divide-y grid grid-cols-1 md:divide-y-0 md:grid-cols-3 mt-5 overflow-hidden rounded-lg border border-gray-100 dark:bg-gray-900 dark:border-gray-800">
+    <div class="px-4 py-5 sm:p-6">
+        <dt class="text-base font-normal text-gray-900">
+            Tổng số lượng thuê bao
+        </dt>
+        <dd class="mt-1 flex justify-between items-baseline md:block lg:flex">
+            <div class="flex items-baseline text-2xl font-semibold text-indigo-600">
+                71,897
+                <span class="ml-2 text-sm font-medium text-gray-500">
+                    from 70,946
+                </span>
+            </div>
+            <div class="inline-flex items-baseline px-2.5 py-0.5 rounded-full text-sm font-medium bg-green-100 text-green-800 md:mt-2 lg:mt-0"><svg class="-ml-1 mr-0.5 flex-shrink-0 self-center h-5 w-5 text-green-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true"><path fill-rule="evenodd" d="M5.293 9.707a1 1 0 010-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 01-1.414 1.414L11 7.414V15a1 1 0 11-2 0V7.414L6.707 9.707a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
+                <span class="sr-only">
+                    Increased by
+                </span>
+                12%
+            </div>
+        </dd>
+    </div>
+    <div class="px-4 py-5 sm:p-6">
+        <dt class="text-base font-normal text-gray-900">
+            Tổng số người đăng ký
+        </dt>
+        <dd class="mt-1 flex justify-between items-baseline md:block lg:flex">
+            <div class="flex items-baseline text-2xl font-semibold text-indigo-600">
+                58.16%
+                <span class="ml-2 text-sm font-medium text-gray-500">
+                    from 56.14%
+                </span>
+            </div>
+
+            <div class="inline-flex items-baseline px-2.5 py-0.5 rounded-full text-sm font-medium bg-green-100 text-green-800 md:mt-2 lg:mt-0"><svg class="-ml-1 mr-0.5 flex-shrink-0 self-center h-5 w-5 text-green-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true"><path fill-rule="evenodd" d="M5.293 9.707a1 1 0 010-1.414l4-4a1 1 0 011.414 0l4 4a1 1 0 01-1.414 1.414L11 7.414V15a1 1 0 11-2 0V7.414L6.707 9.707a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
+                <span class="sr-only">
+                    Increased by
+                </span>
+                2.02%
+            </div>
+        </dd>
+    </div>
+    <div class="px-4 py-5 sm:p-6">
+        <dt class="text-base font-normal text-gray-900">
+            Trung bình hoạt động trong ngày
+        </dt>
+        <dd class="mt-1 flex justify-between items-baseline md:block lg:flex">
+            <div class="flex items-baseline text-2xl font-semibold text-indigo-600">
+                24.57%
+                <span class="ml-2 text-sm font-medium text-gray-500">
+                    from 28.62%
+                </span>
+            </div>
+            <div class="inline-flex items-baseline px-2.5 py-0.5 rounded-full text-sm font-medium bg-red-100 text-red-800 md:mt-2 lg:mt-0"><svg class="-ml-1 mr-0.5 flex-shrink-0 self-center h-5 w-5 text-red-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true"><path fill-rule="evenodd" d="M14.707 10.293a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 111.414-1.414L9 12.586V5a1 1 0 012 0v7.586l2.293-2.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
+                <span class="sr-only">
+                    Decreased by
+                </span>
+                4.05%
+            </div>
+        </dd>
+    </div>
+</dl>
 <div class="widget w-full p-4 mb-4 rounded-lg bg-white border border-gray-100 dark:bg-gray-900 dark:border-gray-800">
     <div class="flex flex-row items-center justify-between mb-6">
         <div class="flex flex-col">
@@ -13,9 +73,27 @@
                 <span>Trạng thái hoạt động của thuê bao trên hệ thống</span>
             </div></div>
         <div class="relative">
-            <button class="btn btn-default btn-circle btn-icon bg-transparent hover:bg-transparent active:bg-transparent relative">
-                <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" class="stroke-current stroke-1" height="18" width="18" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="1"></circle><circle cx="12" cy="5" r="1"></circle><circle cx="12" cy="19" r="1"></circle></svg>
-            </button>
+            <Dropdown Placement="@PlacementType.BottomRight" Class="cursor-pointer">
+                <Overlay>
+                    <Menu>
+                        <MenuItem>
+                            <a rel="noopener noreferrer" @onclick="_=>OnToggleTenantDetail()">
+                                Thêm mới thuê bao
+                            </a>
+                        </MenuItem>
+                        <MenuItem>
+                            <a rel="noopener noreferrer">
+                                Xóa thuê bao
+                            </a>
+                        </MenuItem>
+                    </Menu>
+                </Overlay>
+                <ChildContent>
+                    <AiocSvg Size="20">
+                        <MenuIcon/>
+                    </AiocSvg>
+                </ChildContent>
+            </Dropdown>
         </div>
     </div>
     <Table class="aioc-table" Size="@TableSize.Small" TItem="Data" DataSource="@_data" OnRowClick="OnRowClick">
@@ -52,8 +130,13 @@
     </Table>
 </div>
 
-@code{
+<Drawer Closable="true" Width="720" Visible="@Visible" Placement="right" Title='("Thông tin thuê bao")' OnClose="_=>OnToggleTenantDetail()">
+    <SettingTenantDetail/>
+</Drawer>
 
+@code{
+    public bool Visible = false;
+    
     readonly Data[] _data = {
         new()
         {
@@ -102,5 +185,10 @@
     void OnRowClick(RowData<Data> row)
     {
         Console.WriteLine($"row {row.Data.Key} was clicked.");
+    }
+
+    void OnToggleTenantDetail()
+    {
+        Visible = !Visible;
     }
 }
