--- a/src/AioCore.Hosted/AioCore.Web/_Imports.razor
+++ b/src/AioCore.Hosted/AioCore.Web/_Imports.razor
@@ -7,9 +7,11 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using AioCore.Web
+@using AioCore.Web.Pages.SettingPages.Components
 @using AioCore.Web.Shared
 @using AioCore.Web.Components
 @using AioCore.Web.Components.SvgIcons
 @using AioCore.Web.Components.SvgIcons.ArrowIcons
 @using AioCore.Web.Constants
+@using AioCore.Web.ViewModels
 @using AntDesign
