--- a/src/AioCore.Hosted/AioCore.Web/wwwroot/css/app.css
+++ b/src/AioCore.Hosted/AioCore.Web/wwwroot/css/app.css
@@ -1,4 +1,44 @@
 /*Components*/
+.btn.btn-primary {
+  background-color: #04A385;
+}
+.btn.hover\:bg-primary:hover {
+  background-color: #007358;
+}
+
+input[type=date],
+input[type=email],
+input[type=month],
+input[type=number],
+input[type=password],
+input[type=search],
+input[type=text],
+input[type=time],
+input[type=url],
+input[type=week],
+select,
+textarea {
+  appearance: none !important;
+  background-color: #fff;
+  border-width: 1px;
+  padding: 0.5rem 0.75rem;
+}
+
+*,
+:focus,
+button,
+button:focus,
+input,
+input:focus,
+option,
+option:focus,
+select,
+select:focus,
+textarea,
+textarea:focus {
+  outline: none !important;
+}
+
 nav .menu-items {
   grid-gap: 0.5rem;
 }
@@ -42,6 +82,23 @@ nav .menu-items .menu-item.active .aioc-icon, nav .menu-items .menu-item:hover .
 .has-tooltip:hover .tooltip {
   visibility: visible;
   z-index: 100;
+}
+
+/*framework*/
+.form-group .form-input,
+.form-group .form-textarea {
+  display: block;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  width: 100%;
+}
+
+.focus\:border-primary:focus {
+  border-color: #04A385;
+}
+
+.text-primary {
+  color: #04A385;
 }
 
 /*Pages*/
